fix orientation switching layout bugs

--- a/main-0-3-12.css
+++ b/main-0-3-12.css
@@ -1027,7 +1027,7 @@ footer {
   content: "";
   position: absolute;
   top: 20px;
-  right: -20px;
+  right: -19px;
   border-style: solid;
   border-width: 0 20px 20px 0;
   border-color: transparent transparent #ffffff transparent;
